tests/evaluate/fail/letscope.src
// This test is to make sure that a let variable cannot be accessed outside of scope. This should not evaluate.
main() {
    let x = 50 {
        x;
    };

    print x;
}
